[gd_scene load_steps=7 format=3 uid="uid://bmiaes03nkd56"]

[ext_resource type="Texture2D" uid="uid://w04mbukkbygb" path="res://assets/images/background-1.jpg" id="1_0wakj"]
[ext_resource type="Script" path="res://scenes/general/intro.gd" id="1_f8ca4"]
[ext_resource type="FontFile" uid="uid://ctno0lg21fevr" path="res://assets/font/Atma-Bold.ttf" id="3_1ksoa"]
[ext_resource type="AudioStream" uid="uid://dcne42gbh8c6" path="res://audios/keyboard-typing.ogg" id="3_cklca"]
[ext_resource type="PackedScene" uid="uid://b8jbj3f5jek44" path="res://scenes/buttons/feather.tscn" id="4_4tt8n"]
[ext_resource type="Texture2D" uid="uid://gwc23e7rpuwa" path="res://assets/images/black.jpg" id="6_rheaq"]

[node name="Intro" type="Node2D"]
script = ExtResource("1_f8ca4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0.385493, 0.385492, 0.385492, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_0wakj")
expand_mode = 1

[node name="Labels" type="Node2D" parent="CanvasLayer"]
position = Vector2(479, 98)

[node name="Label_1" type="Label" parent="CanvasLayer/Labels"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.92, 0.797333, 0, 1)
theme_override_colors/font_shadow_color = Color(0.449263, 0.400475, 0.0709901, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_2" type="Label" parent="CanvasLayer/Labels"]
offset_left = 1.0
offset_top = 96.0
offset_right = 41.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.92, 0.797333, 0, 1)
theme_override_colors/font_shadow_color = Color(0.449263, 0.400475, 0.0709901, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_3" type="Label" parent="CanvasLayer/Labels"]
offset_left = 1.0
offset_top = 200.0
offset_right = 41.0
offset_bottom = 267.0
theme_override_colors/font_color = Color(0.92, 0.797333, 0, 1)
theme_override_colors/font_shadow_color = Color(0.449263, 0.400475, 0.0709901, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_4" type="Label" parent="CanvasLayer/Labels"]
offset_left = 1.0
offset_top = 308.0
offset_right = 41.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0.843137, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.479328, 0.0270261, 0.0559467, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_5" type="Label" parent="CanvasLayer/Labels"]
offset_left = 1.0
offset_top = 425.0
offset_right = 41.0
offset_bottom = 492.0
theme_override_colors/font_color = Color(0.92, 0.797333, 0, 1)
theme_override_colors/font_shadow_color = Color(0.449263, 0.400475, 0.0709901, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_6" type="Label" parent="CanvasLayer/Labels"]
visible = false
offset_left = 1.0
offset_top = 195.0
offset_right = 41.0
offset_bottom = 218.0
theme_override_colors/font_color = Color(0.97, 0.354535, 0.1843, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_7" type="Label" parent="CanvasLayer/Labels"]
visible = false
offset_left = 1.0
offset_top = 228.0
offset_right = 41.0
offset_bottom = 251.0
theme_override_colors/font_color = Color(0.97, 0.354535, 0.1843, 1)
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 48
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -348.0
offset_top = -174.0
offset_right = -308.0
offset_bottom = -134.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(7.56, 3.2)

[node name="Start" parent="CanvasLayer/HBoxContainer2" instance=ExtResource("4_4tt8n")]
position = Vector2(-23.0159, -10)
scale = Vector2(0.132275, 0.3125)
key = "START"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08

[node name="TypingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cklca")

[node name="HidePreTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PreLayer" type="CanvasLayer" parent="."]

[node name="BGContainer" type="HBoxContainer" parent="PreLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PreLayer/BGContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_rheaq")

[node name="LabelContainer" type="HBoxContainer" parent="PreLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = -45.0
offset_right = 639.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PreLayer/LabelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ksoa")
theme_override_font_sizes/font_size = 55
text = "Did you know that birds love to poop on RED cars?"

[connection signal="clicked" from="CanvasLayer/HBoxContainer2/Start" to="." method="go_to_next"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HidePreTimer" to="." method="hide_pre"]
